I have a bunch of issues with the cmake stuff that I can't figure out :(  I need an adult

--- a/ne_engine/CMakeLists.txt
+++ b/ne_engine/CMakeLists.txt
@@ -4,8 +4,10 @@ add_library(
     "public/src/Sprite.cpp"
     "public/src/ShaderProgram.cpp"
     "public/src/Engine.cpp"
+    "public/src/Input.cpp"
+    "public/src/Camera.cpp"
+    "public/src/InputManager.cpp"
 )
 
 target_include_directories(ne_engine PUBLIC public/include PRIVATE private/include)
-
-target_link_libraries(ne_engine glad glfw glm)
+target_link_libraries(ne_engine glad glfw glm json)
