--- a/ne_engine/CMakeLists.txt
+++ b/ne_engine/CMakeLists.txt
@@ -8,7 +8,11 @@ add_library(
     "public/src/CharWrapper.cpp"
     "public/src/Triangle.cpp"
     "public/src/JSONLoader.cpp"
+    "public/src/GLFWContext.cpp"
 )
 
-target_include_directories(ne_engine PUBLIC public/include PRIVATE private/include)
 target_link_libraries(ne_engine glad glfw glm nlohmann_json::nlohmann_json)
+
+target_include_directories(ne_engine PUBLIC public/include PRIVATE private/include)
+
+target_link_libraries(ne_engine glad glfw glm stb_image)
