--- a/ne_engine/CMakeLists.txt
+++ b/ne_engine/CMakeLists.txt
@@ -4,8 +4,9 @@ add_library(
     "public/src/Sprite.cpp"
     "public/src/ShaderProgram.cpp"
     "public/src/Engine.cpp"
+    "public/src/GLFWContext.cpp"
 )
 
 target_include_directories(ne_engine PUBLIC public/include PRIVATE private/include)
 
-target_link_libraries(ne_engine glad glfw glm)
+target_link_libraries(ne_engine glad glfw glm stb_image eigen)
