wrestling with cmake errors :(

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
-    "C_Cpp.default.compilerPath": "/usr/bin/g++",
+    "C_Cpp.default.compilerPath": "C:\\msys64\\ucrt64\\bin\\g++.exe",///usr/bin/g++",
+    // "C_Cpp.default.compilerPath": "/usr/bin/g++",
     "C_Cpp.errorSquiggles": "disabled",
     "files.associations": {
         "glfw3.h": "c",
@@ -10,12 +11,12 @@
     },
     "cmake.sourceDirectory": "${workspaceFolder}/tests",
     "cmake.buildBeforeRun": true,
-    "files.associations": {
-        "glfw3.h": "c",
-        "*.frag": "glsl",
-        "cmath": "cpp",
-        "fstream": "cpp"
-    },
+    // "files.associations": {
+    //     "glfw3.h": "c",
+    //     "*.frag": "glsl",
+    //     "cmath": "cpp",
+    //     "fstream": "cpp"
+    // },
     "vim.useSystemClipboard": true,
     "vim.handleKeys": {
         "<C-d>": true,
