Figured out a better way for binding functions that are part of an object in a separate class (No more lambda functions)

--- a/ne_engine/CMakeLists.txt
+++ b/ne_engine/CMakeLists.txt
@@ -6,7 +6,7 @@ add_library(
     "public/src/Engine.cpp"
     "public/src/Input.cpp"
     "public/src/Camera.cpp"
-    "public/src/InputManager.cpp"
+    "public/src/CharWrapper.cpp"
     "public/src/Triangle.cpp"
 )
 
