point_square_demo with shader rotation

--- a/ne_engine/CMakeLists.txt
+++ b/ne_engine/CMakeLists.txt
@@ -5,6 +5,7 @@ add_library(
     "public/src/ShaderProgram.cpp"
     "public/src/Engine.cpp"
     "public/src/GLFWContext.cpp"
+    "public/src/HypRotate.cpp"
 )
 
 target_include_directories(ne_engine PUBLIC public/include PRIVATE private/include)
