Remove redundant CMake

--- a/ne_engine/CMakeLists.txt
+++ b/ne_engine/CMakeLists.txt
@@ -13,8 +13,6 @@ add_library(
     "ne_math/public/src/HypRotate.cpp"
 )
 
-target_link_libraries(ne_engine glad glfw glm nlohmann_json::nlohmann_json)
-
 target_include_directories(ne_engine
 
     PUBLIC
@@ -24,4 +22,4 @@ target_include_directories(ne_engine
     ne_gl/private/include ne_math/private/include ne_input/private/include
 )
 
-target_link_libraries(ne_engine glad glfw glm stb_image)
+target_link_libraries(ne_engine glad glfw glm nlohmann_json::nlohmann_json stb_image)
