--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -89,4 +89,5 @@
         "<C-p>": false
     },
     "cmake.options.statusBarVisibility": "visible",
+    "C_Cpp.default.compilerPath": "C:/msys64/mingw64/bin/g++.exe",
 }
