Created ResourceManager files and messed with the cmake stuff for building (also include Path stuff

--- a/ne_engine/CMakeLists.txt
+++ b/ne_engine/CMakeLists.txt
@@ -15,6 +15,9 @@ add_library(
 
     # ne_math
     "ne_math/public/src/HypRotate.cpp"
+
+    # ne_resmanager
+    "ne_resmanager/public/src/ResourceManager.cpp"
 )
 
 target_include_directories(ne_engine
