--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -16,8 +16,9 @@ add_subdirectory(.. ne_engine)
 
 set(SOURCES
     # "input_test.cpp"
-    "point_square_demo.cpp"
-    "SpriteTesting.cpp"
+    # "point_square_demo.cpp"
+    # "SpriteTesting.cpp"
+    "ResourceManagerTesting.cpp"
 )
 
 set(VS_DEBUGGER_WORKING_DIRECTORY "..")
