--- a/ne_engine/CMakeLists.txt
+++ b/ne_engine/CMakeLists.txt
@@ -23,10 +23,10 @@ add_library(
 target_include_directories(ne_engine
 
     PUBLIC
-    include ne_gl/public/include ne_math/public/include ne_input/public/include
+    include ne_gl/public/include ne_math/public/include ne_input/public/include ne_resmanager/public/include
 
     PRIVATE
-    ne_gl/private/include ne_math/private/include ne_input/private/include
+    ne_gl/private/include ne_math/private/include ne_input/private/include ne_resmanager/private/include
 )
 
 target_link_libraries(ne_engine glad glfw glm nlohmann_json::nlohmann_json stb_image)
