The input bindings isn't working quite as it should, everytime i call getInput to bind a new function it grabs something different for some reason

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -79,7 +79,8 @@
         "cinttypes": "cpp",
         "typeinfo": "cpp",
         "variant": "cpp",
-        "complex": "cpp"
+        "complex": "cpp",
+        "hash_map": "cpp"
     },
     "vim.useSystemClipboard": true,
     "vim.handleKeys": {
