--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -15,7 +15,7 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 add_subdirectory(.. ne_engine)
 
 set(SOURCES
-    # "input_test.cpp"
+    "input_test.cpp"
     # "point_square_demo.cpp"
     # "SpriteTesting.cpp"
     "ResourceManagerTesting.cpp"
