Fixed some shit

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -17,7 +17,7 @@ add_subdirectory(.. ne_engine)
 set(SOURCES
     "input_test.cpp"
     # "point_square_demo.cpp"
-    # "SpriteTesting.cpp"
+    "SpriteTesting.cpp"
     "ResourceManagerTesting.cpp"
 )
 
