--- a/lib/stb_image/CMakeLists.txt
+++ b/lib/stb_image/CMakeLists.txt
@@ -1,3 +1,5 @@
-add_library(stb_image INTERFACE)
+add_library(stb_image STATIC
+"public/src/stb_image.c"
+)
 
-target_include_directories(stb_image INTERFACE ".")
+target_include_directories(stb_image PUBLIC "public/include" PRIVATE "private/include")
