--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "lib/json"]
 	path = lib/json
 	url = https://github.com/nlohmann/json.git
+[submodule "lib/QuadTree"]
+	path = lib/QuadTree
+	url = https://github.com/pvigier/Quadtree
