Trying to deal with adding the quadtree repo as a library to include but i dont know what i'm doing

--- a/ne_engine/CMakeLists.txt
+++ b/ne_engine/CMakeLists.txt
@@ -30,4 +30,4 @@ target_include_directories(ne_engine
     ne_gl/private/include ne_math/private/include ne_input/private/include ne_resmanager/private/include
 )
 
-target_link_libraries(ne_engine glad glfw glm nlohmann_json::nlohmann_json stb_image QuadTree)
+target_link_libraries(ne_engine glad glfw glm nlohmann_json::nlohmann_json stb_image quadtree)
