--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "lib/json"]
 	path = lib/json
 	url = https://github.com/nlohmann/json.git
+[submodule "lib/imgui/src"]
+	path = lib/imgui/src
+	url = https://github.com/ocornut/imgui.git
