--- a/ne_engine/CMakeLists.txt
+++ b/ne_engine/CMakeLists.txt
@@ -26,4 +26,4 @@ target_include_directories(ne_engine
     ne_gl/private/include ne_math/private/include ne_input/private/include
 )
 
-target_link_libraries(ne_engine glad glfw glm nlohmann_json::nlohmann_json stb_image)
+target_link_libraries(ne_engine glad glfw glm nlohmann_json::nlohmann_json stb_image imgui)
