--- a/ne_engine/CMakeLists.txt
+++ b/ne_engine/CMakeLists.txt
@@ -21,16 +21,18 @@ add_library(
     "ne_resmanager/public/src/ResourceManager.cpp"
 
     # ne_ui
+    "ne_ui/public/src/Image.cpp"
+    "ne_ui/public/src/DraggableCanvas.cpp"
 
 )
 
 target_include_directories(ne_engine
 
     PUBLIC
-    include ne_gl/public/include ne_math/public/include ne_input/public/include ne_resmanager/public/include
+    include ne_gl/public/include ne_math/public/include ne_input/public/include ne_resmanager/public/include ne_ui/public/include
 
     PRIVATE
-    ne_gl/private/include ne_math/private/include ne_input/private/include ne_resmanager/private/include
+    ne_gl/private/include ne_math/private/include ne_input/private/include ne_resmanager/private/include ne_ui/private/include
 )
 
 target_link_libraries(ne_engine glad glfw glm nlohmann_json::nlohmann_json stb_image imgui)
