--- a/.gitmodules
+++ b/.gitmodules
@@ -11,5 +11,5 @@
 	path = lib/json
 	url = https://github.com/nlohmann/json.git
 [submodule "lib/imgui/src"]
-	path = lib/imgui/src
+	path = lib/imgui/imgui
 	url = https://github.com/ocornut/imgui.git
