small improvement to atlas builder dock space

--- a/ne_engine/CMakeLists.txt
+++ b/ne_engine/CMakeLists.txt
@@ -34,8 +34,7 @@ add_library(
     "${UI_SRC_DIR}/FileSelector.cpp"
     "${UI_SRC_DIR}/AnimationEditor.cpp"
     "${UI_SRC_DIR}/KeyMappingsManager.cpp"
-        ne_ui/public/include/ui/components/ToolManager.cpp
-        ne_ui/public/include/ui/components/ToolManager.hpp
+    "${UI_SRC_DIR}/ToolManager.cpp"
 
 )
 
