--- a/lib/entt/CMakeLists.txt
+++ b/lib/entt/CMakeLists.txt
@@ -1,3 +1,5 @@
+set(ENTT_DIR ${CMAKE_CURRENT_SOURCE_DIR}/entt/src)
+
 add_library(entt INTERFACE)
 
-target_include_directories(entt INTERFACE ".")
+target_include_directories(entt INTERFACE ${ENTT_DIR})
