I fail to do things on window, trying on linux lmao

--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "lib/entt/entt"]
 	path = lib/entt/entt
 	url = https://github.com/skypjack/entt.git
+[submodule "lib/Catch2"]
+	path = lib/Catch2
+	url = https://github.com/catchorg/Catch2.git
