Update readme, clean up some submodule things before switching to linux.

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -8,3 +8,4 @@ add_subdirectory(imgui)
 set(JSON_BuildTests OFF CACHE INTERNAL "")
 add_subdirectory(json)
 add_subdirectory(entt)
+add_subdirectory(Catch2)
