reorganize ne_system module

--- a/ne_engine/CMakeLists.txt
+++ b/ne_engine/CMakeLists.txt
@@ -2,6 +2,7 @@ set(GRAPHICS_SRC_DIR    ${CMAKE_CURRENT_SOURCE_DIR}/ne_graphics/public/src)
 set(INPUT_SRC_DIR       ${CMAKE_CURRENT_SOURCE_DIR}/ne_input/public/src)
 set(MATH_SRC_DIR        ${CMAKE_CURRENT_SOURCE_DIR}/ne_math/public/src)
 set(RES_SRC_DIR         ${CMAKE_CURRENT_SOURCE_DIR}/ne_resource/public/src)
+set(SYS_SRC_DIR         ${CMAKE_CURRENT_SOURCE_DIR}/ne_system/public/src)
 set(UI_SRC_DIR          ${CMAKE_CURRENT_SOURCE_DIR}/ne_ui/public/src)
 
 add_library(
@@ -37,15 +38,17 @@ add_library(
     "${UI_SRC_DIR}/KeyMappingsManager.cpp"
     "${UI_SRC_DIR}/ToolManager.cpp"
 
-    "system/SystemThreadPool.cpp"
-    "system/SystemSet.cpp"
+    "${SYS_SRC_DIR}/SystemSchedule.cpp"
+    "${SYS_SRC_DIR}/SystemSet.cpp"
+    "${SYS_SRC_DIR}/SystemThreadPool.cpp"
+    "${SYS_SRC_DIR}/SystemExecutor.cpp"
 
 )
 
 target_include_directories(ne_engine
 
     PUBLIC
-    include ne_graphics/public/include ne_math/public/include ne_input/public/include ne_resource/public/include ne_ui/public/include system
+    include ne_graphics/public/include ne_math/public/include ne_input/public/include ne_resource/public/include ne_ui/public/include ne_system/public/include
 
     PRIVATE
     ne_graphics/private/include ne_math/private/include ne_input/private/include ne_resource/private/include ne_ui/private/include
