Code for TileMap

--- a/ne_engine/CMakeLists.txt
+++ b/ne_engine/CMakeLists.txt
@@ -9,6 +9,7 @@ add_library(
     "ne_gl/public/src/GLFWContext.cpp"
     "ne_gl/public/src/Animation.cpp"
     "ne_gl/public/src/TileMap.cpp"
+    "ne_gl/public/src/Tile.cpp"
 
     # ne_input
     "ne_input/public/src/Input.cpp"
@@ -30,4 +31,4 @@ target_include_directories(ne_engine
     ne_gl/private/include ne_math/private/include ne_input/private/include ne_resmanager/private/include
 )
 
-target_link_libraries(ne_engine glad glfw glm nlohmann_json::nlohmann_json stb_image quadtree)
+target_link_libraries(ne_engine glad glfw glm nlohmann_json::nlohmann_json stb_image)
