--- a/ne_engine/CMakeLists.txt
+++ b/ne_engine/CMakeLists.txt
@@ -14,7 +14,7 @@ add_library(
     "${GRAPHICS_SRC_DIR}/App.cpp"
     "${GRAPHICS_SRC_DIR}/GLFWContext.cpp"
     "${GRAPHICS_SRC_DIR}/Image.cpp"
-    "${GRAPHICS_SRC_DIR}/Render.cpp"
+    "${GRAPHICS_SRC_DIR}/Renderer.cpp"
     "${GRAPHICS_SRC_DIR}/ShaderProgram.cpp"
     "${GRAPHICS_SRC_DIR}/Texture.cpp"
     "${GRAPHICS_SRC_DIR}/TextureManager.cpp"
