refactor stb_image to stb library

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -2,7 +2,7 @@
 add_subdirectory(glad)
 add_subdirectory(glfw)
 add_subdirectory(glm)
-add_subdirectory(stb_image)
+add_subdirectory(stb)
 add_subdirectory(imgui)
 
 set(JSON_BuildTests OFF CACHE INTERNAL "")
