--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -17,6 +17,8 @@ add_subdirectory(.. ne_engine)
 set(SOURCES
     "input_test.cpp"
     "point_square_demo.cpp"
+    "ne_squares_test.cpp"
+    "PQ_tile_test.cpp"
 )
 
 set(VS_DEBUGGER_WORKING_DIRECTORY "..")
@@ -31,7 +33,7 @@ foreach(SOURCE ${SOURCES})
 
 
     target_compile_options(${EXECUTABLE} PUBLIC
-        "-O0"
+        "-Og"
         "-g"
     )
 
