abstract GLFW code from Window class

--- a/ne_engine/CMakeLists.txt
+++ b/ne_engine/CMakeLists.txt
@@ -44,7 +44,7 @@ add_library(
 
     ## -- ne_plugin -- ##
     # window
-    "${PLUGIN_SRC_DIR}/Window.cpp"
+    "${PLUGIN_SRC_DIR}/GLFWWindow.cpp"
     "${PLUGIN_SRC_DIR}/WindowPlugin.cpp"
 
 
