adding stuff for real map

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -16,11 +16,11 @@ add_subdirectory(.. ne_engine)
 
 set(SOURCES
     "render_test.cpp"
-    "input_test.cpp"
+    #"input_test.cpp"
     # "point_square_demo.cpp"
-    "SpriteTesting.cpp"
-    "ResourceManagerTesting.cpp"
-    "GuiTesting.cpp"
+    #"SpriteTesting.cpp"
+    #"ResourceManagerTesting.cpp"
+    #"GuiTesting.cpp"
 )
 
 set(VS_DEBUGGER_WORKING_DIRECTORY "..")
