Cannot go through walls and cannot move around tiles that are not there

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -103,7 +103,8 @@
         "xtree": "cpp",
         "xutility": "cpp",
         "future": "cpp",
-        "typeindex": "cpp"
+        "typeindex": "cpp",
+        "stack": "cpp"
     },
     "vim.useSystemClipboard": true,
     "vim.handleKeys": {
