bro IDK theres an error but a sprite occured

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -17,7 +17,7 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 add_subdirectory(.. ne_engine)
 
 set(SOURCES
-    #"render_test.cpp"
+    "render_test.cpp"
     #"render_test.cpp"
     #"input_test.cpp"
     # "point_square_demo.cpp"
@@ -28,7 +28,7 @@ set(SOURCES
     #"input_test.cpp"
     #"point_square_demo.cpp"
     # "ne_squares_test.cpp"
-    "PQ_tile_test.cpp"
+    #"PQ_tile_test.cpp"
 )
 
 set(VS_DEBUGGER_WORKING_DIRECTORY "..")
